secret-manager-usage/tests/fails/unknown_secret.stderr
error: Could not find secret with name FakeSecret
 --> tests/fails/unknown_secret.rs:4:12
  |
4 | pub struct FakeSecret {}
  |            ^^^^^^^^^^
